Store selected tab name and height to prevent the interface from "jumping" on saving.

--- a/assets/subsectiontabs.publish.css
+++ b/assets/subsectiontabs.publish.css
@@ -12,6 +12,7 @@ body.subsectiontabs div.tabs {
 	margin: 0 -19px;
 	min-height: 100px;
 	overflow: hidden;
+	background: url(../lib/stage/images/loading.gif) center no-repeat;
 }
 
 body.subsectiontabs iframe.subsectiontab {
